--- a/src/styles/base/globals.scss
+++ b/src/styles/base/globals.scss
@@ -9,11 +9,11 @@
   --text-l: 1.5rem; // 24
   --text-xl: 2rem; // 32
 
+  --logo-laptop: 2.5rem;
+
   /* color */
-  --color-primary: #6264ca;
-  --color-primary-hover: #858cdc;
-  --color-point-purple: #7f7ad9;
-  --color-point-light-blue: #a8aece;
+  --color-primary: darkcyan;
+  --color-point-skyblue: #bfe2f2ad;
 
   --color-black: #000;
   --color-gray01: #333;
@@ -30,6 +30,7 @@
   --color-gray12: #f6f6f6;
   --color-white: #fff;
 
+  --color-bg: #f5f5f5e5;
   /* box-shadow */
   --shadow-default: 0 1px 10px rgba(170, 170, 170, 25);
 
