--- a/src/styles/base/globals.scss
+++ b/src/styles/base/globals.scss
@@ -31,6 +31,7 @@
   --color-white: #fff;
 
   --color-bg: #f5f5f5e5;
+  
   /* box-shadow */
   --shadow-default: 0 1px 10px rgba(170, 170, 170, 25);
 
@@ -47,7 +48,7 @@
 
 html {
   max-width: 100vw;
-  background-color: #f5f5f5;
+  background-color: var(--color-bg);
   font-family: var(--font-robotoSlab);
   scroll-behavior: smooth;
   font-smooth: antialiased;
@@ -55,6 +56,15 @@ html {
 }
 
 body {
-  overflow: overlay;
-  color: #333;
+  height: 150vh;
+  padding: 7rem 3rem;
+
+  overflow: scroll;
+  color: var(--color-gray01);
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+}
+
+body::-webkit-scrollbar {
+  display: none;
 }
