--- a/src/styles/base/globals.scss
+++ b/src/styles/base/globals.scss
@@ -13,6 +13,7 @@
 
   /* color */
   --color-primary: darkcyan;
+  --color-point-light-green: #b7eae5ad;
   --color-point-skyblue: #bfe2f2ad;
 
   --color-black: #000;
@@ -31,7 +32,7 @@
   --color-white: #fff;
 
   --color-bg: #f5f5f5e5;
-  
+
   /* box-shadow */
   --shadow-default: 0 1px 10px rgba(170, 170, 170, 25);
 
