--- a/src/components/common/logo/Logo.module.scss
+++ b/src/components/common/logo/Logo.module.scss
@@ -13,7 +13,11 @@
       0 0 12px rgba(195, 255, 237, 0.1);
   }
 
-  > .point {
+  .word {
+    display: inline-block;
+  }
+
+  .point {
     color: var(--color-primary);
   }
 }
