--- a/src/components/common/buttons/Button1.module.scss
+++ b/src/components/common/buttons/Button1.module.scss
@@ -2,19 +2,16 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 130px;
-  height: 100%;
 }
 
 .button {
-  width: 60px;
-  height: 40px;
+  padding: 5px 10px;
   transition: all 0.5s ease-in-out;
   border: 2px solid var(--color-primary);
   border-radius: 17px;
   color: var(--color-primary);
-  font-size: 1.3rem;
-  font-weight: 800;
+  font-size: 1.1rem;
+  font-weight: 600;
   background: {
     image: linear-gradient(45deg, var(--color-primary)50%, transparent 50%);
     position: 100%;
