--- a/src/components/common/buttons/Button2.module.scss
+++ b/src/components/common/buttons/Button2.module.scss
@@ -8,6 +8,7 @@
 
 .button {
   display: flex;
+  align-items: center;
   justify-content: center;
   width: 50px;
   height: 30px;
@@ -16,8 +17,8 @@
   border: 1.5px solid var(--color-light-primary);
   border-radius: 17px;
   color: var(--color-gray4);
-  font-size: 1.3rem;
-  font-weight: 500;
+  font-size: 1.4rem;
+  font-weight: 600;
   text-align: center;
 
   &:hover {
@@ -25,3 +26,4 @@
     font-weight: 700;
   }
 }
+
