--- a/src/styles/base/globals.scss
+++ b/src/styles/base/globals.scss
@@ -1,4 +1,5 @@
 @import 'reset.module';
+
 @font-face {
   font-family: 'ChosunGu';
   font-style: normal;
@@ -7,7 +8,24 @@
     format('woff');
 }
 
+@font-face {
+  font-family: 'HakgyoansimWoojuR';
+  font-style: normal;
+  font-weight: normal;
+  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2307-2@1.0/HakgyoansimWoojuR.woff2')
+    format('woff2');
+}
+
+@font-face {
+  font-family: 'Somi';
+  font-style: normal;
+  font-weight: normal;
+  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/naverfont_10@1.0/Somi.woff') format('woff');
+}
+
 :root {
+  --dark: #242423;
+
   /* font-size */
   --text-xs: 0.75rem; // 12
   --text-s: 0.875rem; // 14
@@ -50,17 +68,32 @@
 
   /* korean font */
   --font-ko-header: 'ChosunGu';
+  --font-ko-wooju: 'HakgyoansimWoojuR';
+  
+  --font-ko-somi: 'Somi';
 
+
+  .blind {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    overflow: hidden;
+  }
 }
 
-* {
+*,
+*:before,
+*:after {
   box-sizing: border-box;
+  box-sizing: inherit;
   margin: 0;
   padding: 0;
 }
 
 html {
   max-width: 100vw;
+  min-height: 100vh;
   background-color: var(--color-bg);
   font-family: var(--font-robotoSlab);
   scroll-behavior: smooth;
@@ -69,9 +102,7 @@ html {
 }
 
 body {
-  height: 150vh;
-  padding: 7rem 3rem;
-
+  padding-top: 6rem;
   overflow: scroll;
   color: var(--color-gray01);
   scrollbar-width: none;
