fix: 공통 mixin 적용 및 useHover 수정

--- a/src/components/common/buttons/Button1.module.scss
+++ b/src/components/common/buttons/Button1.module.scss
@@ -1,7 +1,7 @@
+@import 'mixins';
+
 .button-box {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  @include center-center();
 }
 
 .button {
