--- a/src/components/common/buttons/Button2.module.scss
+++ b/src/components/common/buttons/Button2.module.scss
@@ -1,21 +1,20 @@
+@import 'mixins';
+
 .button-box {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  @include center-center();
   width: 130px;
   height: 100%;
 }
 
 .button {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  @include center-center();
   width: 50px;
   height: 30px;
   padding-top: 2px;
   transition: all 0.3s ease-in-out;
   border: 1.5px solid var(--color-light-primary);
   border-radius: 17px;
+  border-radius: var(--rounded-default);
   color: var(--color-gray4);
   font-size: 1.4rem;
   font-weight: 600;
