--- a/src/components/contacts/ContactArticle.module.scss
+++ b/src/components/contacts/ContactArticle.module.scss
@@ -1,13 +1,4 @@
-@mixin long-shadow-text($distance, $blur, $color) {
-  $shadows: null;
-  $color: darken($color, 10);
-  $blur: $blur + px;
-  @for$i from 0 through $distance {
-    $dist: $i + px;
-    $shadows: append($shadows, ($dist $dist $blur $color), comma);
-  }
-  text-shadow: $shadows;
-}
+@import 'mixins';
 
 .container {
   display: flex;
@@ -23,8 +14,8 @@
     height: 90px;
     overflow: hidden;
     transition: all .3s;
-    border-radius: 20px;
-    background-color: #e3e3e3;
+    border-radius: var(--less-rounded);
+    background-color: var(--color-gray11);
     text-align: center;
     text-transform: uppercase;
     cursor: pointer;
@@ -36,7 +27,7 @@
     .title, .mail-title {
       align-self: center;
       margin: 2rem 0;
-      color: #f8f8f8;
+      color: var(--color-gray13);
       font-size: 3.5rem;
       font-weight: 700;
       line-height: 3em;
@@ -56,7 +47,7 @@
 .mail-box {
 
   &:hover {
-    background-color: #5b8683;
+    background-color: var(--color-point-dark-green1);
   }
   
   &:hover > .mail-title {
@@ -67,14 +58,12 @@
   &:hover > .subtitle-box {
     transform: translate(0px, 0px);
     opacity: 1;
-    color: white;
+    color: var(--color-white);
   }
 
   .subtitle-box{
-    display: flex;
     position: absolute;
-    align-items: center;
-    justify-content: center;
+    @include center-center();
     width: 100%;
     height: 100%;
     transform: translate(180px, 180px);
