--- a/src/components/header/Header.module.scss
+++ b/src/components/header/Header.module.scss
@@ -1,16 +1,13 @@
+@import 'mixins';
+
 .header-nav {
-  display: flex;
   position: fixed;
   z-index: 500;
   top: 0;
   left: 0;
-  align-items: center;
-  justify-content: center;
+  @include center-center();
   width: 100%;
   height: 80px;
-  opacity: 0.9;
-  background-color: var(--color-bg);
-  backdrop-filter: blur(1rem);
 
   &:before {
     content: '';
@@ -19,14 +16,12 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
+    height: 80px;
     filter: blur(1.5rem);
   }
 
   .nav-box {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+    @include flex(space-between, center);
     width: 90%;
     height: 100%;
     padding: 0 10px;
@@ -34,9 +29,7 @@
     font-family: var(--font-IBMPlexMono);
 
     .align {
-      display: flex;
-      align-items: center;
-      justify-content: center;
+      @include center-center();
     }
   }
 }
@@ -74,3 +67,12 @@
 .ko {
   font-family: var(--font-ko-header);
 }
+
+.loading {
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 100vh;
+  pointer-events: none;
+}    
+
