--- a/src/app/[lng]/contacts/page.module.scss
+++ b/src/app/[lng]/contacts/page.module.scss
@@ -21,6 +21,7 @@
         width: 95%;
         height: 80px;
         margin-bottom: 10px;
+        cursor: default;
       }
       
       .title {
