--- a/src/components/common/effect/card/Card.module.scss
+++ b/src/components/common/effect/card/Card.module.scss
@@ -1,13 +1,16 @@
-
-
 .content-box {
   visibility: hidden;
   position: absolute;
-  top: 63%;
-  right: 0%;
+  top: 55%;
+  left: 50%;
   transform-style: preserve-3d;
   perspective: 800px;
   opacity: 0;
+
+  @media screen and (max-width: 900px) {
+    top: 70%;
+    left: 50%;
+  }
 
   &.active {
     visibility: visible;
@@ -25,19 +28,38 @@
     border-radius: 10px 10px 0 0;
     background: var(--color-dark-green-bg);
 
+    @media screen and (max-width: 767px) {
+      width: 340px;
+      height: 200px;
+    }
+    @media screen and (max-width: 479px) {
+      width: 250px;
+      height: 200px;
+    }
+
     .title1 {
       position: absolute;
       top: 0;
       left: 0;
-      width: 100%;
       height: 200px;
       transform: translate3d(120px, 40px, 57px);
       color: var(--color-white);
       font-family: var(--font-jejudoldam);
       font-size: 1.9rem;
 
+      @media screen and (max-width: 479px) {
+        transform: translate3d(30px, 40px, 57px);
+      }
+
       &.en1 {
         transform: translate3d(130px, 40px, 57px);
+
+        @media screen and (max-width: 767px) {
+          font-size: 1.3rem;
+        }
+        @media screen and (max-width: 767px) {
+          transform: translate3d(40px, 40px, 57px);
+        }
       }
     }
 
@@ -45,16 +67,26 @@
       position: absolute;
       top: 0;
       left: 0;
-      width: 100%;
       height: 200px;
-      transform: translate3d(140px, 80px, 70px);
+      transform: translate3d(130px, 80px, 70px);
       color: var(--color-white);
       font-family: var(--font-jejudoldam);
       font-size: 2.1rem;
 
+      @media screen and (max-width: 479px) {
+        transform: translate3d(40px, 80px, 70px);
+      }
+
       &.en2 {
         transform: translate3d(110px, 80px, 70px);
         font-size: 1.7rem;
+
+        @media screen and (max-width: 767px) {
+          font-size: 1.4rem;
+        }
+        @media screen and (max-width: 479px) {
+          transform: translate3d(30px, 80px, 70px);
+        }
       }
     }
 
@@ -66,6 +98,10 @@
       height: 80px;
       transform: translate3d(25px, 50px, 50px);
       background: url(/images/card/heart.png) center bottom / 60px no-repeat;
+
+      @media screen and (max-width: 479px) {
+        transform: translate3d(5px, 90px, 50px);
+      }
     }
 
     .ground1 {
@@ -107,6 +143,11 @@
       transform: translate3d(0, 0, 35px);
       opacity: 0.3;
       background: url(/images/card/pine.gif) center center / 100% no-repeat;
+
+      @media screen and (max-width: 767px) {
+        width: 100%;
+        height: 190px;
+      }
     }
 
     .pine {
@@ -125,8 +166,12 @@
       left: 0;
       width: 130px;
       height: 130px;
-      transform: translate3d(200px, 40px, 130px);
+      transform: translate3d(160px, 40px, 130px);
       background: url(/images/card/망고.png) center center / 100% no-repeat;
+
+      @media screen and (max-width: 479px) {
+        transform: translate3d(90px, 40px, 130px);
+      }
     }
   }
 
@@ -140,5 +185,14 @@
     perspective: 800px;
     border-radius: 0 0 10px 10px;
     background: linear-gradient(180deg, var(--color-gray10), var(--color-white));
+    
+    @media screen and (max-width: 767px) {
+      width: 340px;
+      height: 200px;
+    }
+    @media screen and (max-width: 479px) {
+      width: 250px;
+      height: 200px;
+    }
   }
 }
