--- a/src/components/contacts/ContactArticle.module.scss
+++ b/src/components/contacts/ContactArticle.module.scss
@@ -1,9 +1,25 @@
 @import 'mixins';
 
 .container {
-  display: flex;
-  width: 90%;
-  padding: 1rem 0;
+  width: 100%;
+  padding: 1.5rem 7rem 1.5rem 0;
+  @include center-center();
+
+  @media screen and (min-width: 768px) and (max-width: 900px) {
+    width: 50%;
+    padding: 0 1rem;
+    &:nth-child(3), &:nth-child(4) {
+     padding-top: 1rem;
+    }
+  }
+  @media screen and (max-width: 767px) {
+    width: 250px;
+    padding: 0.5rem 1rem;
+  }
+
+  > a, div {
+  width: 100%;
+  }
 
   .article-box, .mail-box {
     display: flex;
@@ -20,6 +36,14 @@
     text-transform: uppercase;
     cursor: pointer;
 
+    @media screen and (max-width: 900px) {
+      width: 100%;
+      height: 80px;
+    }
+    @media screen and (max-width: 767px) {
+      height: 60px;
+    }
+
     &:hover > .title, .mail-title {
       @include long-shadow-text(500, 0, #7e9d9b);
     }
@@ -32,6 +56,13 @@
       font-weight: 700;
       line-height: 3em;
       @include long-shadow-text(500, 0, #ababab);
+
+      @media screen and (max-width: 900px) {
+        font-size: 3rem;
+      }
+      @media screen and (max-width: 767px) {
+        font-size: var(--text-xl);
+      }
     }
 
     .mail-title {
@@ -41,7 +72,7 @@
 }
 
 .article-box:hover {
-  background-color: #cfe1dd;
+  background-color: var(--color-light-green-bg);
 }
 
 .mail-box {
@@ -72,12 +103,12 @@
   
     .subtitle {
       font-family: var(--font-solway);
-      font-size: 1.22rem;
+      font-size: var(--text-m);
       text-transform: lowercase;
+
+      @media screen and (max-width: 767px) {
+        font-size: var(--text-s);
+      }
     }
   }
 }
-
-
-
-
