--- a/src/styles/base/globals.scss
+++ b/src/styles/base/globals.scss
@@ -35,19 +35,27 @@
 
   /* font-size */
   --text-xs: 0.75rem; // 12
-  --text-s: 0.875rem; // 14
-  --text-default: 1rem; // 16
+  --text-s: 0.9rem; // 14
+  --text-default: 1.05rem; // 16
   --text-m: 1.25rem; // 20
   --text-l: 1.5rem; // 24
   --text-xl: 2rem; // 32
 
   --logo-laptop: 2.5rem;
+  --logo-mobile: 2rem;
+
+  --title-ko-laptop: 3.7rem;
+  --title-ko-mobile: 3rem;
+  --title-en-laptop: 3rem;
+  --title-en-mobile: 2.3rem;
 
   /* color */
   --color-primary: darkcyan;
   --color-light-primary: rgb(117, 173, 173);
   
   --color-dark-green-bg: #3a7272;
+  --color-light-green-bg: #cfe1dd;
+
   --color-point-dark-green1: #5b8683;
   --color-point-dark-green2: #7e9d9b;
   --color-point-light-green: #b7eae5ad;
@@ -69,7 +77,7 @@
   --color-gray13: #f8f8f8;
   --color-white: #fff;
 
-  --color-bg: #f5f5f5e5;
+  --color-bg: #f5f5f5f9;
 
   /* box-shadow */
   --shadow-default: 0 1px 10px rgba(170, 170, 170, 25);
@@ -115,7 +123,8 @@ html {
 }
 
 body {
-  padding-top: 6rem;
+  min-height: calc(100vh - 80px);
+  margin-top: 80px;
   overflow: scroll;
   color: var(--color-gray01);
   scrollbar-width: none;
