fix: 모바일에서 3d 카드 로직 수정

--- a/src/components/common/effect/TypingAni.module.scss
+++ b/src/components/common/effect/TypingAni.module.scss
@@ -23,8 +23,10 @@
     color: var(--color-primary);
 
     @media screen and (max-width: 800px) {
-    white-space: pre-line;
     text-align: center;
+    @media screen and (max-width: 479px) {
+    white-space: pre-line;
+    }
 
     &.ko {
       height: 3.2rem;
