--- a/src/components/common/buttons/Button2.module.scss
+++ b/src/components/common/buttons/Button2.module.scss
@@ -9,7 +9,7 @@
   border-radius: var(--rounded-default);
   color: var(--color-gray4);
   font-size: 1.4rem;
-  font-weight: 600;
+  font-weight: 500;
   text-align: center;
 
   @media screen and (max-width: 479px) {
@@ -19,6 +19,10 @@
   &:hover {
     color: var(--color-primary);
     font-weight: 700;
+  }
+
+  &.en {
+    padding-bottom: 2px;
   }
 }
 
