--- a/src/components/language-button/LngSwitchButton.module.scss
+++ b/src/components/language-button/LngSwitchButton.module.scss
@@ -8,7 +8,7 @@
   right: 7%;
   width: 80px;
   height: 80px;
-  font-family: var(--font-balooBhaina), Arial, sans-serif;
+  font-family: var(--font-IBMPlexMono), Arial, Helvetica, sans-serif;
 
   @media screen and (max-width: 767px) {
     right: 5%;
