--- a/src/components/common/buttons/Button2.module.scss
+++ b/src/components/common/buttons/Button2.module.scss
@@ -11,6 +11,7 @@
   font-size: 1.4rem;
   font-weight: 500;
   text-align: center;
+  padding-bottom: 1px;
 
   @media screen and (max-width: 479px) {
     font-size: var(--text-default);
