--- a/src/app/[lng]/page.module.scss
+++ b/src/app/[lng]/page.module.scss
@@ -1,19 +1,11 @@
-.main {
+.container {
   width: 100%;
-  height: 150vh;
-}
+  min-height: calc(100vh - 80px);
 
-/* Enable hover only on non-touch devices */
-@media (hover: hover) and (pointer: fine) {
-}
-
-@media (prefers-reduced-motion) {
-}
-
-/* Mobile */
-@media (max-width: 700px) {
-}
-
-/* Tablet and Smaller Desktop */
-@media (min-width: 701px) and (max-width: 1120px) {
+  .wrapper {
+    width: 100%;
+    height: 100%;
+    min-height: 79vh;
+    margin-bottom: 3rem;
+  }
 }
