--- a/src/components/common/buttons/Button1.module.scss
+++ b/src/components/common/buttons/Button1.module.scss
@@ -10,7 +10,7 @@
   border: 2px solid var(--color-primary);
   border-radius: 17px;
   color: var(--color-primary);
-  font-size: 1.1rem;
+  font-size: inherit;
   font-weight: 600;
   background: {
     image: linear-gradient(45deg, var(--color-primary)50%, transparent 50%);
