--- a/src/components/contacts/ContactArticle.module.scss
+++ b/src/components/contacts/ContactArticle.module.scss
@@ -5,6 +5,10 @@
   padding: 1.5rem 7rem 1.5rem 0;
   @include center-center();
 
+  &:first-child {
+    padding-top: 0;
+  }
+
   @media screen and (min-width: 768px) and (max-width: 900px) {
     width: 50%;
     padding: 0 1rem;
