--- a/src/components/common/loading/Loading.module.scss
+++ b/src/components/common/loading/Loading.module.scss
@@ -3,13 +3,15 @@
 .box {
   position: absolute;
   z-index: 999;
+
+  top: 0;
   flex-direction: column;
-  @include flex(center, center);
   width: 100%;
   height: 100%;
   background-color: #f6f6f6;
   pointer-events: none;
-
+  @include flex(center, center);
+  
   .image-box {
     @include flex(center, center);
     width: 333px;
