refac: 버튼 기능에 isBlocked 속성 외 추가

--- a/src/components/common/buttons/Button2.module.scss
+++ b/src/components/common/buttons/Button2.module.scss
@@ -27,3 +27,12 @@
   }
 }
 
+.block {
+  border: 1.5px solid var(--color-gray10);
+  color: var(--color-gray09);
+
+  &:hover {
+    color: var(--color-gray09);
+    cursor: not-allowed;
+  }
+}
