--- a/src/app/[lng]/page.module.scss
+++ b/src/app/[lng]/page.module.scss
@@ -3,6 +3,7 @@
   min-height: calc(100vh - 80px);
 
   .wrapper {
+    position: relative;
     width: 100%;
     height: 100%;
     min-height: 79vh;
