--- a/src/app/[lng]/contacts/page.module.scss
+++ b/src/app/[lng]/contacts/page.module.scss
@@ -44,6 +44,18 @@
       position: relative;
       width: 100%;
       height: 370px;
+
+      &.mobile {
+        height: 440px;
+
+        @media screen and (min-width: 901px) {
+          height: 560px;
+
+          div {
+            white-space: pre-line;
+          }
+        }
+      }
     }
   } 
 }
