--- a/src/components/common/effect/Intro.module.scss
+++ b/src/components/common/effect/Intro.module.scss
@@ -21,12 +21,14 @@
 
   .align {
     @include center-center;
+    height: 50px;
 
     .drift {
       width: 100%;
       min-height: 32px;
       margin-bottom: 1.5rem;
       font-family: var(--font-mapo-flower);
+      font-display: swap;
       white-space: pre-line;
       @include relative-title-font(1.7, 1.5, 1.2, 1, 0.9);
   
