--- a/packages/notion/styles/global.css
+++ b/packages/notion/styles/global.css
@@ -60,3 +60,8 @@ body {
 ::-webkit-scrollbar-track {           
     background-color: var(--bg-color);
 }
+
+:root {
+  --color-primary: darkcyan;
+  --color-bg: #fafafadb;
+}
