--- a/packages/notion/styles/notion.css
+++ b/packages/notion/styles/notion.css
@@ -39,6 +39,10 @@
   margin-bottom: 1em;
 }
 
+.notion-blank {
+  display: none;
+}
+
 .notion-asset-wrapper-video > div,
 .notion-asset-wrapper-video video {
   width: 100% !important;
