--- a/packages/core/src/styles/base/globals.scss
+++ b/packages/core/src/styles/base/globals.scss
@@ -1,12 +1,5 @@
 @import 'reset.module';
-
-@font-face {
-  font-family: 'ChosunGu';
-  font-style: normal;
-  font-weight: normal;
-  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_20-04@1.0/ChosunGu.woff')
-    format('woff');
-}
+@import 'mixins';
 
 @font-face {
   font-family: 'HakgyoansimWoojuR';
