--- a/packages/core/src/components/common/buttons/Button1.module.scss
+++ b/packages/core/src/components/common/buttons/Button1.module.scss
@@ -2,6 +2,7 @@
 
 .button-box {
   @include center-center();
+  margin-top: 7px;
 }
 
 .button {
@@ -12,6 +13,7 @@
   color: var(--color-primary);
   font-size: inherit;
   font-weight: 600;
+  display: inline-block;
   background: {
     image: linear-gradient(45deg, var(--color-primary)50%, transparent 50%);
     position: 100%;
