--- a/packages/core/src/components/common/effect/Intro.module.scss
+++ b/packages/core/src/components/common/effect/Intro.module.scss
@@ -65,7 +65,7 @@
     }
     &:nth-child(3) {
       width: 80%;
-      margin-top: 0.7rem;
+      margin: 0.7rem 0;
 
       @media screen and (max-width: 550px) {
         white-space: normal;
