--- a/packages/core/src/components/common/Guide.module.scss
+++ b/packages/core/src/components/common/Guide.module.scss
@@ -8,35 +8,24 @@
   color: var(--color-gray03);
   font-family: var(--font-guide);
   text-align: center;
-  white-space: normal;
+  white-space: pre-line;
   @include relative-title-font(1, 0.95, 0.9, 0.85, 0.8);
   @include center-center;
-  
-  @media screen and (max-width: 768px) {
-    white-space: pre-line;
-  }
 
   &.en {
-    @include relative-title-font(1.1, 1.05, 1, 0.95, 0.9);
+    @include relative-title-font(1.1, 1.05, 1, 0.95, 0.82);
     letter-spacing: 0.5px;
+  }
+
+  &.open {
+    @include center-center(column);
   }
 }
 
-.point {
-  color: var(--color-primary);
-  font-weight: 600;
+.button-box {
+  margin: 10px 0;
 }
 
-.weight {
-  font-weight: 600;
-}
-
-.highlight {
-  @include highlight-everytime(#e7f5ecc5);
-}
-
-.italic {
-  display: inline-block;
-  margin-top: 0.2rem;
-  font-style: italic;
+.close {
+  display: none;
 }
