--- a/packages/core/src/app/[lng]/page.module.scss
+++ b/packages/core/src/app/[lng]/page.module.scss
@@ -8,5 +8,27 @@
     height: 100%;
     min-height: 79vh;
     margin-bottom: 3rem;
+  
+    .iframe-container {
+      width: 440px;
+      height: 60vh;
+      margin: 0 auto;
+      position: relative;
+      border-radius: 20px;
+      overflow: hidden;
+
+      @media screen and (max-width: 479px) {
+        width: 100%;
+      }
+
+      iframe {
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        top: 0;
+        left: 0;
+        border: 1px solid transparent;
+      }
+    }
   }
 }
