fix(core): 웹접근성 개선을 위한 폰트 색상 외 수정

--- a/packages/core/src/components/contacts/ContactArticle.module.scss
+++ b/packages/core/src/components/contacts/ContactArticle.module.scss
@@ -59,7 +59,7 @@
       font-size: 3.5rem;
       font-weight: 700;
       line-height: 3em;
-      @include long-shadow-text(500, 0, #ababab);
+      @include long-shadow-text(500, 0, #9e9d9d);
 
       @media screen and (max-width: 900px) {
         font-size: 3rem;
