--- a/packages/shared/src/app/globals.scss
+++ b/packages/shared/src/app/globals.scss
@@ -51,7 +51,7 @@
   --title-en-mobile: 2.3rem;
 
   /* color */
-  --color-primary: darkcyan;
+  --color-primary: #057F81;
   --color-light-primary: rgb(117, 173, 173);
   
   --color-dark-green-bg: #3a7272;
