fix(core): 쓰지 않는 폰트, css 삭제

--- a/packages/shared/src/app/globals.scss
+++ b/packages/shared/src/app/globals.scss
@@ -15,6 +15,7 @@
   font-style: normal;
   font-weight: normal;
   src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/naverfont_10@1.0/Somi.woff') format('woff');
+  font-display: swap;
 }
 
 @font-face {
@@ -22,6 +23,7 @@
   font-style: normal;
   font-weight: normal;
   src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2210-EF@1.0/EF_jejudoldam.woff2') format('woff2');
+  font-display: swap;
 }
 
 @font-face {
