--- a/packages/core/src/components/common/effect/card/Card.module.scss
+++ b/packages/core/src/components/common/effect/card/Card.module.scss
@@ -142,7 +142,7 @@
       height: 210px;
       transform: translate3d(0, 0, 35px);
       opacity: 0.3;
-      background: url(/images/card/pine.gif) center center / 100% no-repeat;
+      background: url(/images/card/pine.webp) center center / 100% no-repeat;
 
       @media screen and (max-width: 767px) {
         width: 100%;
