--- a/packages/core/src/app/[lng]/page.module.scss
+++ b/packages/core/src/app/[lng]/page.module.scss
@@ -1,6 +1,7 @@
 .container {
   width: 100%;
   min-height: calc(100vh - 80px);
+  margin-top: 80px;
 
   .wrapper {
     position: relative;
@@ -10,23 +11,23 @@
     margin-bottom: 3rem;
   
     .iframe-container {
+      position: relative;
       width: 440px;
       height: 60vh;
       margin: 0 auto;
-      position: relative;
-      border-radius: 20px;
       overflow: hidden;
+      border-radius: 20px;
 
       @media screen and (max-width: 479px) {
         width: 100%;
       }
 
       iframe {
-        width: 100%;
-        height: 100%;
         position: absolute;
         top: 0;
         left: 0;
+        width: 100%;
+        height: 100%;
         border: 1px solid transparent;
       }
     }
