--- a/packages/core/src/components/common/titles/PageTitle.module.scss
+++ b/packages/core/src/components/common/titles/PageTitle.module.scss
@@ -27,7 +27,7 @@
       @include center-center(column);
       width: 100%;
       height: 100%;
-      margin-bottom: 1rem;
+      margin: 1rem 0;
     }
 
     &.center {
