--- a/packages/core/src/app/[lng]/projects/page.module.scss
+++ b/packages/core/src/app/[lng]/projects/page.module.scss
@@ -1,14 +1,13 @@
 .container {
   width: 100%;
   height: 100%;
+  margin-top: 80px;
 
   .iframe-container {
     position: relative;
     width: 100%;
     height: calc(100vh - 80px);
     margin: 0 auto;
-    // border-radius: 20px;
-    // overflow: hidden;
 
     @media screen and (max-width: 479px) {
       width: 100%;
